...
    private var shortagesNumber by mutableIntStateOf(0)
    private var additionalNumber by mutableIntStateOf(0)
    var numberOfScanned by mutableIntStateOf(0)
    private var itemsUiList = mutableStateListOf<StockDraftRequestItem>()
    private var stockDraftRequestsUiList = mutableStateListOf<StockDraftRequest>()
    private val scanValues =
        mutableListOf("اضافی", "کسری درخواستی", "همه", "بدون مغایرت", "کسری جور شده")
    private var scanFilter by mutableIntStateOf(2)
    private var openClearDialog by mutableStateOf(false)
    private var scanTypeValue by mutableStateOf("بارکد")
    private var createTypeValue by mutableStateOf("ایجاد حواله")
    private var stockDraftRequestNumber by mutableStateOf("")
    private var stockDraftRequestLocation by mutableStateOf("انتخاب مقصد")
    private var stockDraftRequestLocationsList = mutableListOf<String>()
    var step by mutableIntStateOf(0)
    private var openFinishDialog by mutableStateOf(false)
...
    }

    private fun filterResult() {

        shortagesNumber = 0
        productConflicts.filter {
            it.product.conflictType == "کسری"
        }.forEach {
            shortagesNumber += it.product.conflictNumber
        }

        additionalNumber = 0
        productConflicts.filter {
...
                }
            },

            actions = {
                if (step == 1) {
                    IconButton(
                        modifier = Modifier.testTag("CheckInTestTag"),
                        onClick = {
                            if (!loading && !rf.scanning) {
                                openClearDialog = true
                            }
                        }) {
                        Icon(
...
                                clear()
                                step = 0
                                barcode.disable()
                                saveToMemory()
                            }
                        }) {
                            Text(text = "پایان اسکن")
                        }
                    }
                }
            }
        } else if (step == 2) {

...
    @Composable
    fun Content() {
        Column {
            if (openClearDialog) {
                AlertDialogWith2Button(
                    title = "کالاهای اسکن شده پاک شوند؟",
                    btnConfirm = "بله",
                    btnNotConfirm = "خیر",
                    btnNotConfirmOnClick = { openClearDialog = false },
                    btnConfirmOnClick = {
                        openClearDialog = false
                        barcode.scannedBarcodes.clear()
                        rf.epcs.clear()
...
            }

            if (openFinishDialog) {
                AlertDialogWith2Button(
                    title = "کالاهای اسکن شده ثبت شوند؟",
                    btnConfirm = "بله",
                    btnNotConfirm = "خیر، نتایج پاک شوند",
                    btnNotConfirmOnClick = {
                        openFinishDialog = false
                        clear()
                        step = 0
                        if (barcode.isEnabled) {
                            barcode.disable()
...
                }

                LazyColumn(modifier = Modifier.padding(bottom = 56.dp)) {

                    val uiItems = itemsUiList.toList()

                    items(uiItems.size) { i ->

                        ItemWithClearButton(
                            product = uiItems[i],
                            onClearButtonClick = { clearOneScan(uiItems[i].product) },
                            showFoundNumber = scanValues[scanFilter] == "کسری جور شده",
                            onItemClick = { openSearchActivity(uiItems[i].product) },
...
            mutableStateOf(false)
        }

        Box(modifier = modifier) {
            Row(
                modifier = Modifier
                    .testTag("checkInFilterDropDownList")
                    .clickable { expanded = true }) {
                Text(text = scanValues[scanFilter])
                Icon(imageVector = Icons.Filled.ArrowDropDown, "")
            }

            DropdownMenu(
...
