...

@Composable
fun EmptyBox(text: String) {
    Box(
        modifier = Modifier
            .fillMaxSize()
            .testTag("emptyBox")
    ) {
        Column(
            modifier = Modifier
                .align(Alignment.Center)
                .width(256.dp)
        ) {
...

        Button(
            modifier = Modifier
                .padding(start = 16.dp, end = 16.dp, top = 8.dp, bottom = 8.dp)
                .align(Alignment.Center)
                .fillMaxSize()
                .testTag("bottomBarButton"),
            onClick = onClick
        ) {
            Text(
                text = text,
                style = MaterialTheme.typography.bodyMedium
            )
...
                    MaterialTheme.colorScheme.onPrimary
                },
                shape = MaterialTheme.shapes.small
            )
            .fillMaxWidth()
            .height(100.dp)
            .testTag("items")
            .combinedClickable(
                enabled = clickable,
                onLongClick = { onLongClick() },
                onClick = { onClick() })
    ) {

...
        Row(
            modifier = Modifier
                .clickable {
                    filteredValues = values
                    expanded = true
                }
                .testTag("FilterDropDownList")
                .fillMaxHeight(),
        ) {

            icon()
            text()
            Icon(
...

    Box(modifier = modifier) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier
                .clickable { expanded = true }
                .testTag("scanTypeDropDownList")) {
            Text(text = scanTypeValue)
            Icon(
                imageVector = if (expanded) Icons.Filled.KeyboardArrowUp else Icons.Filled.KeyboardArrowDown, ""
            )
        }

...
                NotificationPopUp(popupHost)

                SimpleTextField(
                    modifier = Modifier
                        .padding(start = 16.dp, end = 16.dp, top = 16.dp)
                        .fillMaxWidth()
                        .testTag("CustomTextField"),
                    hint = item,
                    onValueChange = {
                        onValueChange(it)
                    },
                    value = value,
                    onDone = {
...
