...
    <string name="point_mobile">PM85</string>
    <string name="point_mobile2">PM75</string>
    <string name="kiosk">کیوسک</string>
    <string name="barcodeSpecial">موجودی انبار خاص</string>
    <string name="barcodeChecker">بارکد چکر</string>
    <string name="kioskCurrentWarehouse">موجودی انبار جاری</string>
    <string name="addOrRemoveCarton">ورود/خروج کارتن</string>
    <string name="stockDraftRequestFind">جمع آوری درخواست</string>
    <string name="stockDraftDetails">جزئیات/پرینت حواله</string>
    <string name="ReceiveLogistics">تحویل به راننده</string>
    <string name="ReturnLogistics">لغو تحویل به راننده</string>
    <string name="StockDraftCreateOfCarton">چاپ حواله از کارتن</string>
    <string name="stockDraftTransferConfirmation">لیست لجستیک بین انباری</string>
...
